WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252190
REGRESSION(
255664@main
): [Lockdown Mode] Switch back to `CaptivePortal` key to avoid shipping apps that use that key
https://bugs.webkit.org/show_bug.cgi?id=252190
Summary
REGRESSION(255664@main): [Lockdown Mode] Switch back to `CaptivePortal` key t...
Brent Fulgham
Reported
2023-02-13 13:46:58 PST
The rename in
255664@main
changed the string used to store the user decision about Lockdown Mode use. We should just continue to use the key until a proper API is created so we don't lose user state.
Attachments
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2023-02-13 13:49:25 PST
<
rdar://102422729
>
Brent Fulgham
Comment 2
2023-02-13 13:58:02 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10054
EWS
Comment 3
2023-02-13 16:58:24 PST
Committed
260233@main
(7b389848394a): <
https://commits.webkit.org/260233@main
> Reviewed commits have been landed. Closing PR #10054 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug