Cherry-pick 7b389848394a. rdar://problem/102422729

REGRESSION(255664@main): [Lockdown Mode] Switch back to `CaptivePortal` key to avoid shipping apps that use that key
    https://bugs.webkit.org/show_bug.cgi?id=252190
    <rdar://102422729>

    Reviewed by Wenson Hsieh and Chris Dumez.

    The Lockdown Mode renaming update done in 255664@main changed the string used to store
    the app-specific user decision about Lockdown Mode use. We did not realize this string
    was effectively an API used by other applications.

    To avoid breaking behavior, we should revert to use the original key until a proper API
    is created.

    * Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/UIDelegate.mm:

    Canonical link: https://commits.webkit.org/260233@main